ingress/kubewebserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubewebserver-service
  labels:
    app: kubewebserver-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: kubewebserver
